
syntax = "proto3";

//package protocobuff_Demo;
//generate Interface class or not
option java_generic_services = true;
//java_multiple_files (file option): Causes top-level messages, enums, and services to be defined at the package level, rather than inside an outer class named after the .proto file.
option java_multiple_files = true;
option java_package = "com.hservice.grpc.schema";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}

  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}

  rpc getData(HelloRequest) returns(HelloReplyUpdate){}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message HelloRequestInt {
  int32 name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The response message containing the greetings
message HelloReplyObject {
  string id = 1;
  string name=2;
}

// The response message containing the greetings
message HelloReplyUpdate {
  string message = 1;
  HelloReplyObject helloReplyObject=2;
}